Refactoring push, focusing on cleaning up state machines